---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-09-07
  Changes:
    - Factorio2.0 support
    - Minigun graphics replaced by new one from snouz
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-06-20
  Changes:
    - Changed logics for mined/transformed vehicles to keep pods charge. Detection of pods preinstalled. No fix is required for VW2.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2023-06-15
  Bugfixes:
    - Unloading pod when there are stacks of ammo in inventory, but new stack was still required led to crash.
    - Mod required redeploying vehicles after adding to existing gamesave.
  Changes:
    - Added some weapon info in tooltips (for K2/BobVE energy costs inflation coefficient of 1.5 to be applied).
    - Replaced external interface methods with script_raised support for VehicleWagon2 and other mods support. VW2 still needs a fix
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2022-12-28
  Bugfixes:
    - Flame turret pod had increased height during reload causing mod crash.
  Balancing:
    - Slightly increased range for Gun pod Tier-1.
    - Added 10% damage bonus to Gun pod Tier-2.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2022-07-28
  Changes:
    - Improved support for Bob's vehicle equipment. Pods of all tiers now have reduced height.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-07-27
  Features:
    - Every reload consumes electrical power. Tier-1 goes ok with solar+battery, Tier-2 needs reactor+batteries mk2, Tier-3 demands nuclear/fusion energy.