@@ -2,7 +2,7 @@
 
 This mod gives vehicles an advantage they miss to make them an interesting alternative to combat shotgun + rocket launcher exoskeleton-muscled typical assaults. Can be even more useful together with tank's ability to quickly move over [creep](https://mods.factorio.com/mod/Warmonger).
 
-Entities architecture idea and minigun pics were taken from nice Gun Equipment mod by Zdenek (DeznekCZ) and Qon. Best regards for great idea missing in other mods.
+Entities architecture was taken from nice Gun Equipment mod by Zdenek (DeznekCZ) and Qon. Best regards for great idea missing in other mods.
 Everything else was implemented from scratch. UPS-hungry reload issue was fixed and turned into mod balance feature - consume electrical power to reload expendable ammo.
 
 - Balanced mix of ammo and electricity consumption,
@@ -11,18 +11,21 @@ Everything else was implemented from scratch. UPS-hungry reload issue was fixed 
 - Flamethrower turret pod (tank attack type) - 2 tiers.
 - Third tier is available for Rampant Arsenal mod users only (one does need them only to counter Rampant New Enemies top tiers) and require nuclear-powered vehicles.
 - Unload ammo action available via tool shortcut (Alt+U by default),
-- Predictable ammo selection. One can load particular ammo into every turret pod no matter its type.
-- Vehicle Wagon 2 mod is supported, but requires a patched (maybe one day a new released) version of that mod.
-- Should be compatible with other mods (bob's warfare, krastorio2) and multiplayer - help wanted for tests !
+- Predictable ammo selection. With mod setting to lock ammo consuming reload for each pod.
+- Vehicle Wagon 2 mod is supported.
+- Should be compatible with other mods (bob's warfare, krastorio2) and multiplayer.
 
-This mod doesn't add equipment grid for vanilla tank and car. Please use Rampant Arsenal or VehicleGrid if not using mod packs: Bob's vehicle equipment, Krastorio2 and so on.
+If no equipment grid was added by other mods default car receives a small grid.
 
-If using hundreds turret pods in many vehicles reload will be slowed down a little, but without big UPS impact.
+If using hundreds turret pods in many vehicles reload will be distributed in more ticks, but without considerable UPS impact.
+
+## How it works
+
+1. Add power source in vehicle equipment (early game - solar panels + personal battery; mid game - portable reactor and battery)
+1. Store corresponding ammo (magazines, shells, flamethrower ammo)
+1. Insert Minigun/Shotgun/Flame turret pod in the grid
 
 Recommended mods combo: Rampant (with New Enemies tier7+), Rampant Arsenal, Warmonger.
-
 Idea is to replace overpowered Rampant Arsenal mod's Personal Cannon, Shotgun and Bullet defense equipments, keeping only electrical and slowing down ones, while adding not only physical damage defenses, but all ammo types.
 
-Hardcore recommendation is Building Time mod (with a free-repairing cheatfix patch).
-
-Please check changelog for known issues, other info and plans.
+Another hardcore recommendation is Building Time mod.
