@@ -29,22 +29,22 @@ no-ammo=no ammo
 [fluid-name]
 
 [item-description]
-turret-pod-gun-t1-empty-equipment=Minigun Turret Pod Tier-1. 360 KJ per reload. One magazine loaded.
-turret-pod-gun-t2-empty-equipment=Minigun Turret Pod Tier-2. 2 MJ per reload. +10% damage. Two magazines loaded.
-turret-pod-gun-t3-empty-equipment=Minigun Turret Pod Tier-3. 9 MJ per reload. +25% damage. Five magazines loaded.
+turret-pod-gun-t1-empty-equipment=Minigun Turret Pod Tier-1. One magazine loaded.
+turret-pod-gun-t2-empty-equipment=Minigun Turret Pod Tier-2. +10% damage. Two magazines loaded.
+turret-pod-gun-t3-empty-equipment=Minigun Turret Pod Tier-3. +25% damage. Five magazines loaded.
 turret-pod-shotgun-t1-empty-equipment=Shotgun Turret Pod Tier-1. Damage dealt depends on ammo type.
 turret-pod-shotgun-t2-empty-equipment=Shotgun Turret Pod Tier-2. Damage dealt depends on ammo type.
 turret-pod-shotgun-t3-empty-equipment=Shotgun Turret Pod Tier-3. Damage dealt depends on ammo type.
 turret-pod-flame-t1-empty-equipment=Flame Turret Pod Tier-1. Damage dealt depends on ammo type.
 turret-pod-flame-t2-empty-equipment=Flame Turret Pod Tier-2. Damage dealt depends on ammo type.
-turret-pod-gun-t1-equipment=360 KJ per reload (One magazine).
-turret-pod-gun-t2-equipment=2 MJ per reload (Two magazines). +10% total damage bonus.
-turret-pod-gun-t3-equipment=9 MJ per reload (Five magazines). +25% total damage bonus.
-turret-pod-flame-t1-equipment=1 MJ per reload (One canister).
-turret-pod-flame-t2-equipment=5.5 MJ per reload (Two canisters). +20% total damage bonus.
-turret-pod-shotgun-t1-equipment=3.6 MJ per reload (One magazine). +10% total damage bonus.
-turret-pod-shotgun-t2-equipment=18 MJ per reload (Two magazines). +30% total damage bonus.
-turret-pod-shotgun-t3-equipment=108 MJ per reload (Five magazines). +50% total damage bonus.
+turret-pod-gun-t1-equipment=800 KJ per reload (One magazine).
+turret-pod-gun-t2-equipment=4 MJ per reload (Two magazines). +10% total damage bonus.
+turret-pod-gun-t3-equipment=19 MJ per reload (Five magazines). +25% total damage bonus.
+turret-pod-flame-t1-equipment=2.5 MJ per reload (One canister).
+turret-pod-flame-t2-equipment=10 MJ per reload (Two canisters). +20% total damage bonus.
+turret-pod-shotgun-t1-equipment=5 MJ per reload (One magazine). +10% total damage bonus.
+turret-pod-shotgun-t2-equipment=28 MJ per reload (Two magazines). +30% total damage bonus.
+turret-pod-shotgun-t3-equipment=290 MJ per reload (Five magazines). +50% total damage bonus.
 
 [equipment-name]
 
